fix(core): fixed tooltip z-index issue
replaced switch statement to assign words classes by status with a Map

changed "missing-word" style.

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 .tf-tooltip-parent:hover div.tf-tooltip {
     opacity: 1;
+    z-index: 1000;
 }
 
 .tf-tooltip {
@@ -12,10 +13,10 @@
     border-radius: 5px 5px 5px 5px;
     color: #ffffffcc;
     background-color: #abcefc;
-    margin-top: 20px;
+    margin-top: 70px;
     max-width: 425px;
     right: 10%;
-    z-index: 10;
+    z-index: -10;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
@@ -52,5 +53,5 @@
 .tf-tooltip span.word-missing {
     color: #ff0000;
     font-style: italic;
-    text-decoration: underline;
+    text-decoration: underline dashed red 2px;
 }
